--- a/ezyzip/app/src/main/res/layout/activity_main.xml
+++ b/ezyzip/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <TextView
@@ -13,6 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:textSize="40dp"
         android:text="Inscription"
         android:gravity="center"
         android:textColor="#5a189a"
@@ -57,7 +59,9 @@
         android:hint="@string/hint_password"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginEnd="16dp"
+        android:inputType="textPassword"
+        />
     <EditText
         android:id="@+id/ed_repassword"
         android:textSize="16dp"
@@ -66,7 +70,9 @@
         android:hint="@string/hint_repassword"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginEnd="16dp"
+        android:inputType="textPassword"
+        />
 
     <CheckBox
         android:id="@+id/checkBoxAgree"
@@ -76,39 +82,39 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
-
+    <Button
+        android:id="@+id/btn_signup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_login"
+        android:backgroundTint="#00377e"
+        android:text="@string/label_btn_signup"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"/>
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" avez  vous déjà un compte?"
+        android:textColor="#000000"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ed_password"
-        android:backgroundTint="@android:color/holo_purple"
+        android:backgroundTint="#5a189a"
         android:text="@string/label_btn_login"
         android:textColor="@color/white"
         android:textSize="30dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Si vous avez un compte,"
-        android:textColor="#000000"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" connectez-vous"
-        android:textColor="#0000FF"
-        android:layout_toRightOf="@id/textView1"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginTop="60dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"/>
 
 
 </LinearLayout>
