--- a/ezyzip/app/src/main/res/layout/activity_connexion.xml
+++ b/ezyzip/app/src/main/res/layout/activity_connexion.xml
@@ -7,30 +7,24 @@
     android:orientation="vertical"
     android:background="@drawable/background"
     tools:context=".Connexion">
+
     <TextView
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="100dp"
-        android:text="Connexion"
         android:gravity="center"
-        android:textSize="40dp"
+        android:text="Connexion"
         android:textColor="#5a189a"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        android:radius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <!-- <Button
-        android:id="@+id/btn_capture_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/str_label_capture_buttom"/>
-    <ImageView
-        android:id="@+id/img_selected_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="#7a7a7a"/>-->
+
     <EditText
         android:id="@+id/ed_mail"
         android:textSize="20dp"
@@ -39,8 +33,12 @@
         android:hint="@string/hint_mail"
         android:inputType="textEmailAddress"
         android:layout_marginTop="60dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"/>
+        android:layout_marginStart="40dp"
+        android:textColor="#5a189a"
+        android:padding="5dp"
+        android:background="@drawable/edit"
+        android:layout_marginEnd="40dp"/>
+
     <EditText
         android:id="@+id/ed_password"
         android:textSize="20dp"
@@ -48,8 +46,10 @@
         android:layout_height="wrap_content"
         android:hint="@string/hint_password"
         android:layout_marginTop="60dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
+        android:padding="5dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/edit"
         android:inputType="textPassword"
         />
     <CheckBox
@@ -57,18 +57,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="J'accepte les Conditions Générales et la politique de confidentialité et cookies."
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="80dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
+
     <Button
         android:id="@+id/btn_login_To_Application"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="60dp"
         android:backgroundTint="#5a189a"
         android:text="@string/label_btn_login"
         android:textColor="@color/white"
-        android:textSize="30dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"/>
+        android:textSize="30dp" />
 </LinearLayout>
