--- a/ezyzip/app/src/main/res/layout/activity_main.xml
+++ b/ezyzip/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,9 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="16dp"
+        android:textStyle="bold"
         android:textSize="40dp"
         android:text="Inscription"
         android:gravity="center"
@@ -25,53 +26,71 @@
 
     <EditText
         android:id="@+id/ed_name"
-        android:textSize="16dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_name"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:textSize="20dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginStart="40dp"
+        android:textColor="#5a189a"
+        android:padding="5dp"
+        android:background="@drawable/edit"
+        android:layout_marginEnd="40dp"
+        />
     <EditText
         android:id="@+id/ed_lastname"
-        android:textSize="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_lastname"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:textSize="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="40dp"
+        android:textColor="#5a189a"
+        android:padding="5dp"
+        android:background="@drawable/edit"
+        android:layout_marginEnd="40dp"
+
+        />
     <EditText
         android:id="@+id/ed_mail"
         android:layout_width="match_parent"
-        android:textSize="16dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_mail"
         android:inputType="textEmailAddress"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+
+        android:textSize="20dp"
+        android:background="@drawable/edit"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="40dp"
+        android:padding="5dp"
+        />
     <EditText
         android:id="@+id/ed_password"
-        android:textSize="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_password"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:inputType="textPassword"
+        android:textSize="20dp"
+        android:background="@drawable/edit"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="40dp"
+        android:padding="5dp"
         />
     <EditText
         android:id="@+id/ed_repassword"
-        android:textSize="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_repassword"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:inputType="textPassword"
+        android:textSize="20dp"
+        android:background="@drawable/edit"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="40dp"
+        android:padding="5dp"
         />
 
     <CheckBox
@@ -79,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="J'accepte les Conditions Générales et la politique de confidentialité et cookies."
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="25dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
     <Button
@@ -91,18 +110,20 @@
         android:text="@string/label_btn_signup"
         android:textColor="@color/white"
         android:textSize="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"/>
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="85dp"
         android:text=" avez  vous déjà un compte?"
         android:textColor="#000000"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:textSize="18dp" />
+
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
@@ -112,7 +133,7 @@
         android:text="@string/label_btn_login"
         android:textColor="@color/white"
         android:textSize="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"/>
 
