--- a/ezyzip/app/src/main/res/layout/activity_welcome.xml
+++ b/ezyzip/app/src/main/res/layout/activity_welcome.xml
@@ -15,8 +15,9 @@
         android:layout_gravity="center"
         android:textColor="#5a189a"
         android:textSize="40sp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:text="Meteo"
+        android:textStyle="bold"
         />
 
     <LinearLayout
@@ -27,22 +28,33 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
             app:cardBackgroundColor="#5a189a">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/tvDate"
                 android:text="@{viewModel.currentDate}"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 android:textColor="#FFFFFF"
                 android:gravity="center"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="15dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"
+                />
 
         </androidx.cardview.widget.CardView>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:text="Veuillez choisir une ville"
+            android:textColor="#00377e"
+            android:textStyle="bold"
+            android:textSize="22dp"
+            android:layout_marginTop="15dp"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -50,7 +62,13 @@
             android:layout_marginBottom="10dp"
             android:hint="Enter City Name"
             android:inputType="textPersonName"
-            android:minWidth="200dp"/>
+            android:minWidth="200dp"
+            android:background="@drawable/edit"
+            android:textSize="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:padding="5dp"
+            />
 
         <EditText
             android:layout_width="match_parent"
@@ -59,18 +77,30 @@
             android:layout_marginBottom="10dp"
             android:hint="Enter Country Name"
             android:inputType="textPersonName"
-            android:minWidth="200dp"/>
+            android:minWidth="200dp"
+            android:background="@drawable/edit"
+            android:textSize="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:padding="5dp"
+            />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btnGet"
             android:layout_marginBottom="10dp"
-            android:background="#0070c7"
+            android:backgroundTint="#5a189a"
             android:textColor="@android:color/white"
             android:onClick="getweatherDetails"
             android:text="Get"
-            app:backgroundTint="@null" />
+            app:backgroundTint="@null"
+            android:textSize="25dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginStart="20dp"
+            android:padding="5dp"/>
 
         <ScrollView
             android:layout_width="match_parent"
