--- a/ezyzip/app/src/main/res/values/colors.xml
+++ b/ezyzip/app/src/main/res/values/colors.xml
@@ -4,4 +4,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#5a189a</color>
     <color name="colorPrimary">#FF0000</color>
+    <color name="background_gradient_start">#000000</color>
+    <color name="background_gradient_end">#DDDDDD</color>
+    <color name="fastlane_background">#0096a6</color>
+    <color name="search_opaque">#ffaa3f</color>
+    <color name="selected_background">#ffaa3f</color>
+    <color name="default_background">#3d3d3d</color>
 </resources>
